test/integration/bad/includes/else.stan
generated quantities {
   int x;
   if(1)
  #include if.inc
  else {
    x = 25;
  }
}
